fix: ul and ol style on mobile

--- a/themes/next/source/css/_common/outline/mobile.styl
+++ b/themes/next/source/css/_common/outline/mobile.styl
@@ -56,6 +56,10 @@
       margin-inline-end: 1em;
     }
 
+    > ul, ol {
+      padding-right: 18px;
+    }
+
     // For blockquotes.
     > blockquote {
       margin: 0 18px;
